update: use session-based authentication